objects/nXBI__Business_Credit_Bankruptcy_Information__c.object
<CustomObject>
    <fields>
        <fullName>nXBI__Business_Credit_Report__c</fullName>
        <label>Business Credit Report</label>
        <referenceTo>nXBI__Business_Credit_Report__c</referenceTo>
        <relationshipName>Bankruptcy_Information</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>nXBI__Date_Filed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Filed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>nXBI__Document_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Document Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nXBI__Exempt_Amount__c</fullName>
        <label>Exempt Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nXBI__Total_Assets__c</fullName>
        <label>Total Assets</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nXBI__Total_Liabilities__c</fullName>
        <label>Total Liabilities</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Business Credit Bankruptcy Information</label>
    <nameField>
        <displayFormat>BI-{00000000}</displayFormat>
        <label>Bankruptcy Information Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Business Credit Bankruptcy Information</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>